--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <a href=https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(Treemap).png
                     target="_blank">
                     <div class="visualization-card">
-                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Total Usage Distribution Per State (Treemap).png"
+                        <img src="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(Treemap).png?raw=true"
                             alt="Visualization 2" style="width: 100%; height: auto;">
                         <div class="caption">Treemap Showing Total Usage Distribution Per State</div>
                     </div>
