--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href=https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(Treemap).png
+                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(Treemap).png"
                     target="_blank">
                     <div class="visualization-card">
-                        <img src="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(Treemap).png?raw=true"
+                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Total Usage Distribution Per State (Treemap).png"
                             alt="Visualization 2" style="width: 100%; height: auto;">
                         <div class="caption">Treemap Showing Total Usage Distribution Per State</div>
                     </div>
                 </a>
             </div>
             <div class="col-md-4">
-                <a href=https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Usage%20Distribution%20Across%20India.png
+                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Usage%20Distribution%20Across%20India.png"
                     target="_blank">
                     <div class="visualization-card">
                         <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Usage Distribution Across India.png"
@@ -156,7 +156,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href=https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Annual%20Usage%20Trend%20Per%20Region%20(Line).png
+                <a href"=https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Annual%20Usage%20Trend%20Per%20Region%20(Line).png"
                     target="_blank">
                     <div class="visualization-card">
                         <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Annual Usage Trend Per Region (Line).png"
@@ -186,8 +186,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href=https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Region-Wise%20Distribution%20on%20WeekdaysWeekends%20(SBar).png
-                    target="_blank">
+                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Region-Wise%20Distribution%20on%20WeekdaysWeekends%20(SBar).png"                    target="_blank">
                     <div class="visualization-card">
                         <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Region-Wise Distribution on WeekdaysWeekends (SBar).png"
                             alt="Visualization 7" style="width: 100%; height: auto;">
@@ -197,9 +196,6 @@
             </div>
         </div>
     </div>
-
-
-
     <div class="credits-container">
         <h5>TEAM 458</h5>
         <p></p>
