--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-image: url("file:///C:/Users/aishu/Downloads/henry-co-tqu0IOMaiU8-unsplash.jpg");
+            background-image: url("marble_wallpaper.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
