--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(HBar).png"
                     target="_blank">
                     <div class="visualization-card">
-                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Total Usage Distribution Per State (HBar).png"
+                        <img src="Total Usage Distribution Per State (HBar).png"
                             alt="Visualization 1" style="width: 100%; height: auto;">
                         <div class="caption">Horizontal Bar Chart Showing Total Usage Distribution Per State</div>
                     </div>
