--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(Treemap).png"
                     target="_blank">
                     <div class="visualization-card">
-                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Total Usage Distribution Per State (Treemap).png"
+                        <img src="Total Usage Distribution Per State (Treemap).png"
                             alt="Visualization 2" style="width: 100%; height: auto;">
                         <div class="caption">Treemap Showing Total Usage Distribution Per State</div>
                     </div>
@@ -149,7 +149,7 @@
                 <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Usage%20Distribution%20Across%20India.png"
                     target="_blank">
                     <div class="visualization-card">
-                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Usage Distribution Across India.png"
+                        <img src="Usage Distribution Across India.png"
                             alt="Visualization 3" style="width: 100%; height: auto;">
                         <div class="caption">Usage Distribution Across India</div>
                     </div>
@@ -159,7 +159,7 @@
                 <a href"=https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Annual%20Usage%20Trend%20Per%20Region%20(Line).png"
                     target="_blank">
                     <div class="visualization-card">
-                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Annual Usage Trend Per Region (Line).png"
+                        <img src="Annual Usage Trend Per Region (Line).png"
                             alt="Visualization 4" style="width: 100%; height: auto;">
                         <div class="caption">Line Chart Indicating Annual Usage Trend Per Region</div>
                     </div>
@@ -169,7 +169,7 @@
                 <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Electricity%20Consumption%20on%20Diwali%202019%20(HBar).pngo"
                     target="_blank">
                     <div class="visualization-card">
-                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Electricity Consumption on Diwali 2019 (HBar).png"
+                        <img src="Electricity Consumption on Diwali 2019 (HBar).png"
                             alt="Visualization 5" style="width: 100%; height: auto;">
                         <div class="caption">Electricity Consumption on Diwali 2019</div>
                     </div>
@@ -179,7 +179,7 @@
                 <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Seasonal%20Trend%20Per%20Region%20(Line).png"
                     target="_blank">
                     <div class="visualization-card">
-                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Seasonal Trend Per Region (Line).png"
+                        <img src="Seasonal Trend Per Region (Line).png"
                             alt="Visualization 6" style="width: 100%; height: auto;">
                         <div class="caption">Seasonal Trend Per Region</div>
                     </div>
@@ -188,7 +188,7 @@
             <div class="col-md-4">
                 <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Region-Wise%20Distribution%20on%20WeekdaysWeekends%20(SBar).png"                    target="_blank">
                     <div class="visualization-card">
-                        <img src="C:\Users\aishu\OneDrive\Pictures\Screenshots\New folder\Region-Wise Distribution on WeekdaysWeekends (SBar).png"
+                        <img src="Region-Wise Distribution on WeekdaysWeekends (SBar).png"
                             alt="Visualization 7" style="width: 100%; height: auto;">
                         <div class="caption">Region-Wise Distribution on Weekdays/Weekends</div>
                     </div>
