--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(HBar).png"
+                <a href="https://github.com/aishwaryaSudhakar01/smartbridge458/blob/main/Total%20Usage%20Distribution%20Per%20State%20(HBar).png"
                     target="_blank">
                     <div class="visualization-card">
                         <img src="Total Usage Distribution Per State (HBar).png"
@@ -136,7 +136,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Total%20Usage%20Distribution%20Per%20State%20(Treemap).png"
+                <a href="https://github.com/aishwaryaSudhakar01/smartbridge458/blob/main/Total%20Usage%20Distribution%20Per%20State%20(Treemap).png"
                     target="_blank">
                     <div class="visualization-card">
                         <img src="Total Usage Distribution Per State (Treemap).png"
@@ -146,7 +146,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Usage%20Distribution%20Across%20India.png"
+                <a href="https://github.com/aishwaryaSudhakar01/smartbridge458/blob/main/Usage%20Distribution%20Across%20India.png"
                     target="_blank">
                     <div class="visualization-card">
                         <img src="Usage Distribution Across India.png"
@@ -156,7 +156,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href"=https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Annual%20Usage%20Trend%20Per%20Region%20(Line).png"
+                <a href="https://github.com/aishwaryaSudhakar01/smartbridge458/blob/main/Annual%20Usage%20Trend%20Per%20Region%20(Line).png"
                     target="_blank">
                     <div class="visualization-card">
                         <img src="Annual Usage Trend Per Region (Line).png"
@@ -166,7 +166,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Electricity%20Consumption%20on%20Diwali%202019%20(HBar).pngo"
+                <a href="https://github.com/aishwaryaSudhakar01/smartbridge458/blob/main/Electricity%20Consumption%20on%20Diwali%202019%20(HBar).png"
                     target="_blank">
                     <div class="visualization-card">
                         <img src="Electricity Consumption on Diwali 2019 (HBar).png"
@@ -176,7 +176,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Seasonal%20Trend%20Per%20Region%20(Line).png"
+                <a href="https://github.com/aishwaryaSudhakar01/smartbridge458/blob/main/Seasonal%20Trend%20Per%20Region%20(Line).png"
                     target="_blank">
                     <div class="visualization-card">
                         <img src="Seasonal Trend Per Region (Line).png"
@@ -186,7 +186,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="https://github.com/aishwaryaSudhakar01/data_analysis_dashboard_smartbridge/blob/main/Region-Wise%20Distribution%20on%20WeekdaysWeekends%20(SBar).png"                    target="_blank">
+                <a href="https://github.com/aishwaryaSudhakar01/smartbridge458/blob/main/Region-Wise%20Distribution%20on%20WeekdaysWeekends%20(SBar).png"                    target="_blank">
                     <div class="visualization-card">
                         <img src="Region-Wise Distribution on WeekdaysWeekends (SBar).png"
                             alt="Visualization 7" style="width: 100%; height: auto;">
